--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -6,14 +6,15 @@
     "src/renderer/src/**/*.tsx",
     "src/preload/*.d.ts"
   ],
-  "compilerOptions": {
-    "composite": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@renderer/*": [
-        "src/renderer/src/*"
-      ]
-    }
+"compilerOptions": {
+  "composite": true,
+  "jsx": "react-jsx",
+  "baseUrl": ".",
+  "paths": {
+    "@renderer/*": [
+      "src/renderer/src/*"
+    ],
+    "@/*": ["./src/*"]
   }
+}
 }
