--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lucide-react": "^0.548.0",
     "react-router": "^7.9.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "ts-pattern": "^5.9.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
