--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,17 +4,17 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts", 
+    "src/main/utils/handle-apk.ts"  
   ],
-"compilerOptions": {
-  "composite": true,
-  "jsx": "react-jsx",
-  "baseUrl": ".",
-  "paths": {
-    "@renderer/*": [
-      "src/renderer/src/*"
-    ],
-    "@/*": ["./src/*"]
+  "compilerOptions": {
+    "composite": true,
+    "jsx": "react-jsx",
+    "paths": {
+      "@renderer/*": [
+        "./src/renderer/src/*"
+      ],
+      "@/*": ["./src/*"]
+    }
   }
-}
 }
