feat: 完成解包功能

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,9 @@
       "@main/*": [
         "./src/main/*"
       ],
+      "@root/*": [
+        "./*"
+      ],
       "@/*": ["./src/*"]
     }
   }
