--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,8 +4,7 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts", 
-    "src/main/utils/handle-apk.ts"  
+    "src/preload/*.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
