--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.userWords": ["apksigner","apktool", "Dfile","amap","tinnove","Anims","autonavi"]
+  "cSpell.userWords": ["apksigner","apktool", "Dfile","amap","tinnove","Anims","autonavi","aapt1"]
 }
